# rtl-sdr-analyzer

./: .env.example  .gitignore  README.md  REDDIT_POST.md  pyproject.toml
.github/workflows/: ci.yml
.opencode/skills/code-review-commit/: SKILL.md
config/: default.yml
docker/: docker-compose.yml
src/rtl_sdr_analyzer/: __init__.py  __main__.py  logging_config.py
src/rtl_sdr_analyzer/cli/: app.py  config_overrides.py
src/rtl_sdr_analyzer/config/: loader.py  models.py
src/rtl_sdr_analyzer/core/: __init__.py  rtlsdr_base.py  signal_processor.py
src/rtl_sdr_analyzer/detection/: __init__.py  detector.py  events.py
src/rtl_sdr_analyzer/exporters/: __init__.py  base.py  csv_exporter.py  json_exporter.py
src/rtl_sdr_analyzer/orchestrator/: __init__.py  analyzer.py  event_bus.py
src/rtl_sdr_analyzer/recording/: __init__.py  recorder.py
src/rtl_sdr_analyzer/storage/: __init__.py  database.py  stats.py
src/rtl_sdr_analyzer/visualization/: __init__.py  headless.py  plotter.py  strategy.py
tests/: conftest.py
tests/integration/: test_analyzer_loop.py  test_cli_commands.py
tests/unit/: test_config_models.py  test_detector.py  test_event_bus.py  test_events.py  test_exporters.py  test_headless.py  test_recording.py  test_rtlsdr_base.py  test_signal_processor.py  test_storage.py
